<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="fia.ues.sv.login.CrearUsuarioActivity"
    android:weightSum="1">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="1500dp">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/titulo_nuevo_usuario"
        android:id="@+id/textView3"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"

        android:paddingBottom="20dp"
        android:textSize="25dp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/textNombreUsuario"
        android:id="@+id/textViewNombre_Usuario"
        android:layout_below="@+id/textView3"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editText"
        android:layout_below="@+id/textViewNombre_Usuario"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/textClaveUsuario"
        android:id="@+id/textView4"
        android:layout_below="@+id/editText"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/editText2"
        android:layout_below="@+id/textView4"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tbl_usuarios"
        android:id="@+id/textView5"
        android:layout_above="@+id/usuario_actualizarCheck"
        android:layout_alignStart="@+id/docente_insertarCheck" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/usuario_permisos"
        android:id="@+id/textView6"
        android:layout_below="@+id/editText2"
        android:layout_alignParentStart="true" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/crud_insertar"
        android:id="@+id/usuario_insertatCheck"
        android:checked="false"
        android:layout_marginTop="67dp"
        android:layout_below="@+id/textView6"
        android:layout_alignParentStart="true" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/crud_actualizar"
        android:id="@+id/usuario_actualizarCheck"
        android:layout_alignTop="@+id/usuario_insertatCheck"
        android:layout_toEndOf="@+id/usuario_insertatCheck"
        android:checked="false" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/crud_eliminar"
        android:id="@+id/usuario_eliminarCheck"
        android:layout_below="@+id/usuario_insertatCheck"
        android:layout_alignParentStart="true"
        android:checked="false" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/crud_consultar"
        android:id="@+id/usuario_consultarCheck"
        android:layout_alignTop="@+id/usuario_eliminarCheck"
        android:layout_toEndOf="@+id/usuario_eliminarCheck"
        android:checked="false" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/crud_actualizar"
        android:id="@+id/docente_actualizarCheck"
        android:checked="false"
        android:layout_below="@+id/usuario_consultarCheck"
        android:layout_toEndOf="@+id/docente_insertarCheck"
        android:layout_marginTop="29dp" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/crud_consultar"
        android:id="@+id/docente_consultarCheck"
        android:checked="false"
        android:layout_below="@+id/docente_actualizarCheck"
        android:layout_toEndOf="@+id/docente_eliminarCheck" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/crud_insertar"
        android:id="@+id/docente_insertarCheck"
        android:checked="false"
        android:layout_alignTop="@+id/docente_actualizarCheck"
        android:layout_toStartOf="@+id/usuario_consultarCheck" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/crud_eliminar"
        android:id="@+id/docente_eliminarCheck"
        android:checked="false"
        android:layout_below="@+id/docente_actualizarCheck"
        android:layout_alignStart="@+id/docente_insertarCheck" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tbl_docente"
        android:id="@+id/textView7"
        android:layout_above="@+id/docente_insertarCheck"
        android:layout_alignStart="@+id/docente_insertarCheck" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/tbl_tipoContratacion"
        android:id="@+id/textView8"
        android:layout_marginTop="16dp"
        android:layout_below="@+id/docente_consultarCheck"
        android:layout_alignStart="@+id/docente_eliminarCheck" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/crud_insertar"
        android:id="@+id/checkBox9"
        android:layout_below="@+id/textView8"
        android:layout_alignStart="@+id/textView8"
        android:checked="false" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/crud_actualizar"
        android:id="@+id/checkBox10"
        android:layout_alignBottom="@+id/checkBox9"
        android:layout_toEndOf="@+id/checkBox9"
        android:checked="false" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/crud_eliminar"
        android:id="@+id/checkBox11"
        android:layout_below="@+id/checkBox9"
        android:layout_alignStart="@+id/checkBox9"
        android:checked="false" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/crud_consultar"
        android:id="@+id/checkBox12"
        android:layout_alignTop="@+id/checkBox11"
        android:layout_alignStart="@+id/docente_consultarCheck"
        android:checked="false" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/tbl_categoria"
        android:id="@+id/textView9"
        android:layout_below="@+id/checkBox11"
        android:layout_alignStart="@+id/checkBox11"
        android:layout_marginTop="19dp" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/crud_insertar"
        android:id="@+id/categoria_insertarCheck"
        android:layout_below="@+id/textView9"
        android:layout_alignStart="@+id/textView9"
        android:checked="false" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/crud_actualizar"
        android:id="@+id/categoria_actualizarCheck"
        android:layout_alignTop="@+id/categoria_insertarCheck"
        android:layout_toEndOf="@+id/checkBox11"
        android:checked="false" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/crud_eliminar"
        android:id="@+id/categoria_eliminarCheck"
        android:layout_below="@+id/categoria_insertarCheck"
        android:layout_toStartOf="@+id/categoria_actualizarCheck"
        android:checked="false" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/crud_consultar"
        android:id="@+id/categoria_consultarCheck"
        android:layout_below="@+id/categoria_actualizarCheck"
        android:layout_alignStart="@+id/categoria_actualizarCheck"
        android:checked="false" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/tbl_detalleGradoAcad"
        android:id="@+id/textView10"
        android:layout_below="@+id/categoria_eliminarCheck"
        android:layout_alignStart="@+id/categoria_eliminarCheck"
        android:layout_marginTop="20dp" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/crud_insertar"
        android:id="@+id/detalleGAcad_insertarCheck"
        android:checked="false"
        android:layout_below="@+id/textView10"
        android:layout_alignStart="@+id/textView10" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/crud_actualizar"
        android:id="@+id/detalleGAcad_actualizarCheck"
        android:checked="false"
        android:layout_below="@+id/textView10"
        android:layout_toEndOf="@+id/categoria_eliminarCheck" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/crud_consultar"
        android:id="@+id/detalleGAcad_consultarCheck"
        android:checked="false"
        android:layout_alignTop="@+id/detalleGAcad_eliminarCheck"
        android:layout_alignStart="@+id/detalleGAcad_actualizarCheck" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/crud_eliminar"
        android:id="@+id/detalleGAcad_eliminarCheck"
        android:checked="false"
        android:layout_below="@+id/detalleGAcad_insertarCheck"
        android:layout_alignStart="@+id/detalleGAcad_insertarCheck" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/tbl_gradoAcad"
        android:id="@+id/textView11"
        android:layout_below="@+id/detalleGAcad_eliminarCheck"
        android:layout_alignStart="@+id/detalleGAcad_eliminarCheck"
        android:layout_marginTop="15dp" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/crud_insertar"
        android:id="@+id/gradoAcad_insertarCheck"
        android:checked="false"
        android:layout_below="@+id/textView11"
        android:layout_alignStart="@+id/textView11" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/crud_actualizar"
        android:id="@+id/gradoAcad_actualizarCheck"
        android:checked="false"
        android:layout_below="@+id/textView11"
        android:layout_alignStart="@+id/detalleGAcad_consultarCheck" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/crud_consultar"
        android:id="@+id/gradoAcad_consultarCheck"
        android:checked="false"
        android:layout_below="@+id/gradoAcad_actualizarCheck"
        android:layout_alignEnd="@+id/gradoAcad_actualizarCheck" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/crud_eliminar"
        android:id="@+id/gradoAcad_eliminarCheck"
        android:checked="false"
        android:layout_below="@+id/gradoAcad_insertarCheck"
        android:layout_toStartOf="@+id/gradoAcad_actualizarCheck" />

</RelativeLayout>

</ScrollView>
